--- a/TP2 - Bianchini, Posadas, Urtubey/.classpath
+++ b/TP2 - Bianchini, Posadas, Urtubey/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="src/librerias/JMapViewer.jar"/>
+	<classpathentry kind="lib" path="src/librerias/gson-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
